04/11/2018
- bugfix rare case where OP public key is starting with 0x80 byte, and thus resulting in
  systematic token signature verification error with message "too long"

02/08/2018
- added functions to manually request the invalidation of the caches; see #142

02/06/2018
- added more logging that may help debugging configuration; see #140; thanks @pamiel

01/30/2018
- add support for configuring an outgoing proxy; see #139
- release 1.5.3

01/28/2018
- correct iat checks: make sure it is not in the future rather than being too old; see #137

01/06/2018
- add support for Forwarded header; see #128
- add debug info about reasons for re-authentication; see #130

12/30/2017
- use X-Forwarded-Host header when building the redirect URI if present. See #128

12/14/2017
- release 1.5.2

12/13/2017
- ensure we don't log nil if initial JWT verification fails

12/08/2017
- avoid putting a negative TTL into the cache; closes #127; thanks @ChristianCiach and @gwkunze

12/04/2017
- allow setting ssl_verify to "false" on userinfo endpoint call; closes #125; thanks @hugomcfonseca

11/22/2017
- avoid that lua-resty-jwt is a dependency in an OAuth 2.0 RS remote validation setup; closes #124
- correct README.md around lua-resty-jwt requirement
- make handling of missing `jwks_uri` more robust

11/17/2017
- added support for verifying HMAC signatures on id tokens - it has
  already been supported for access tokens before
- fix handling of signatures using unsupported algorithms on id
  tokens. Such signatures will cause a warning to be logged but the id
  tokens are considered valid. access tokens signed with an
  unsupported algorithm are considered invalid. This is the same
  behavior as has been present in 1.4.1. See #122
- release 1.5.1

11/15/2017
- fix return of access_token when renew_access_token_on_expiry = false ; see #121

11/14/2017
- release 1.5.0

11/13/2017
- provided explicit control over whether the access token gets renewed